Add team member reflections and feedback summary

--- a/CNN_inclass_activity_Breakout_9.ipynb
+++ b/CNN_inclass_activity_Breakout_9.ipynb
@@ -26,32 +26,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "641v9kvSgdeG"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "# Hi, Can you guys add your githubs here\n",
-        "\n",
-        "\n",
-        "Jeremiah : j-agbaje\n",
-        "\n",
-        "Armand: Armandkay\n",
-        "\n",
-        "Tanguy: ktanguy\n",
-        "\n",
-        "Nicholas: flammarionick\n",
-        "\n",
-        "Benitha: buwituze"
+        "## Our Contributions"
       ],
       "metadata": {
-        "id": "RBXXVyo2ltIH"
+        "id": "hN76ORNEss2W"
       }
     },
     {
@@ -61,11 +41,15 @@
         "\n",
         "Armand Kayiranga: I think we could've gotten 100% if we had more time and according to the time we was give. I'm sure also we will be getting good marks for it.\n",
         "\n",
-        "Tangue Kwizera: I think we could've gotten 100% f we had more time to fully complete and test the model to ensure it works as intended. Additionally, including more detailed comments in the code would have helped guide us better, especially since this is our first time working with such a model. It’s still a valuable learning experience.\n",
+        "Tangue Kwizera: I think we could've gotten 100% f we had more time to fully complete and test the model to ensure it works as expected. Additionally, including more detailed comments in the code would have helped guide us better, especially since this is our first time working with such a model. It’s still a valuable learning experience.\n",
         "\n",
-        "Benitha Uwituze: I think we could have have increased the number of training samples for each class and added data augmentation techniques to create more diverse examples to get 100% Github:buwituze\n",
+        "Benitha Uwituze: I think we could have have increased the number of training samples for each class and added data augmentation techniques to create more diverse examples to get 100%.\n",
         "\n",
-        "Deolinda Bogore: I think we could’ve gotten 100% if we had the chance to refine a few final details.\n"
+        "Nicholas Eke: I think we could have structured our notebook better with headings for each section\n",
+        "\n",
+        "Ganza Owen Yhaan: I think we would have done better if we were a bit more familiar with tensorflow, hence we would have had time to test our model.\n",
+        "\n",
+        "Gnon Déolinda Bio Bogore:I think we could have done better if we had more time to test the model and see how well it works. It was a good learning experience, and we know what to improve next time."
       ],
       "metadata": {
         "id": "8vJupuQNji25"
