--- a/CNN_inclass_activity_Breakout_9.ipynb
+++ b/CNN_inclass_activity_Breakout_9.ipynb
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "jdfNWCBMSnY2"
       },
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -85,32 +85,35 @@
         "img1 = Image.open('cat1.jpg').convert(\"RGB\")\n",
         "img2 = Image.open('cat2.jpg').convert(\"RGB\")\n",
         "img3 = Image.open('dog1.jpg').convert(\"RGB\")\n",
+        "img4 = Image.open('dog2.jpg').convert(\"RGB\")\n",
         "\n",
         "# Makes sure to resize the images to (28,28)\n",
         "img1 = img1.resize([28,28])\n",
         "img2 = img2.resize([28,28])\n",
-        "img3 = img3.resize([28,28])"
+        "img3 = img3.resize([28,28])\n",
+        "img4 = img4.resize([28,28])"
       ],
       "metadata": {
         "id": "F_GDFvWUVam-"
       },
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X = np.array([np.array(img1), np.array(img2), np.array(img3)]) / 255.0\n",
+        "X = np.array([np.array(img1), np.array(img2), np.array(img3), np.array(img4)]) / 255.0\n",
         "\n",
         "# Labels: [cat, cat, dog]\n",
         "y = np.array([[1, 0],\n",
         "              [1, 0],\n",
-        "              [0, 1]])"
+        "              [0, 1],\n",
+        "              [0,1]])"
       ],
       "metadata": {
         "id": "ufW87Wj2fDIJ"
       },
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -125,18 +128,39 @@
     {
       "cell_type": "code",
       "source": [
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Conv2D, Flatten, Dense\n",
+        "from tensorflow.keras import regularizers\n",
+        "\n",
         "model = Sequential()\n",
-        "model.add(Conv2D(2, (3, 3), strides=(1, 1), input_shape=(28, 28, 3)))\n",
-        "model.add(Conv2D(2, (3,3),strides=(2,2)))\n",
+        "model.add(Conv2D(2, (3, 3), strides=(1, 1), input_shape=(28, 28, 3),\n",
+        "                 kernel_regularizer=regularizers.l1(0.01)))\n",
+        "model.add(Conv2D(2, (3, 3), strides=(2, 2),\n",
+        "                 kernel_regularizer=regularizers.l1(0.01)))\n",
         "model.add(Flatten())\n",
-        "model.add(Dense(16, activation='relu'))\n",
-        "model.add (Dense(2, activation='sigmoid'))"
+        "model.add(Dense(16, activation='relu',\n",
+        "                kernel_regularizer=regularizers.l1(0.01)))\n",
+        "model.add(Dense(2, activation='sigmoid',\n",
+        "                kernel_regularizer=regularizers.l1(0.01)))\n"
       ],
       "metadata": {
-        "id": "7LMg7wCAS8RL"
+        "id": "7LMg7wCAS8RL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "641985d5-78ca-471a-f9ec-56f73a7b8c36"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/keras/src/layers/convolutional/base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -149,18 +173,18 @@
           "height": 289
         },
         "id": "z0zhEeBWVSNw",
-        "outputId": "c93af9f4-a13b-443c-ef32-b33c73586cbc"
+        "outputId": "c04a3d80-b35b-4dd1-edb5-9664a439834a"
       },
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "\u001b[1mModel: \"sequential_4\"\u001b[0m\n"
+              "\u001b[1mModel: \"sequential_7\"\u001b[0m\n"
             ],
             "text/html": [
-              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_4\"</span>\n",
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_7\"</span>\n",
               "</pre>\n"
             ]
           },
@@ -173,30 +197,30 @@
               "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
               "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
               "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-              "│ conv2d_7 (\u001b[38;5;33mConv2D\u001b[0m)               │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m26\u001b[0m, \u001b[38;5;34m26\u001b[0m, \u001b[38;5;34m2\u001b[0m)      │            \u001b[38;5;34m56\u001b[0m │\n",
+              "│ conv2d_14 (\u001b[38;5;33mConv2D\u001b[0m)              │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m26\u001b[0m, \u001b[38;5;34m26\u001b[0m, \u001b[38;5;34m2\u001b[0m)      │            \u001b[38;5;34m56\u001b[0m │\n",
               "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-              "│ conv2d_8 (\u001b[38;5;33mConv2D\u001b[0m)               │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m12\u001b[0m, \u001b[38;5;34m12\u001b[0m, \u001b[38;5;34m2\u001b[0m)      │            \u001b[38;5;34m38\u001b[0m │\n",
+              "│ conv2d_15 (\u001b[38;5;33mConv2D\u001b[0m)              │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m12\u001b[0m, \u001b[38;5;34m12\u001b[0m, \u001b[38;5;34m2\u001b[0m)      │            \u001b[38;5;34m38\u001b[0m │\n",
               "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-              "│ flatten_1 (\u001b[38;5;33mFlatten\u001b[0m)             │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m288\u001b[0m)            │             \u001b[38;5;34m0\u001b[0m │\n",
+              "│ flatten_7 (\u001b[38;5;33mFlatten\u001b[0m)             │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m288\u001b[0m)            │             \u001b[38;5;34m0\u001b[0m │\n",
               "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-              "│ dense (\u001b[38;5;33mDense\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │         \u001b[38;5;34m4,624\u001b[0m │\n",
+              "│ dense_14 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │         \u001b[38;5;34m4,624\u001b[0m │\n",
               "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-              "│ dense_1 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m2\u001b[0m)              │            \u001b[38;5;34m34\u001b[0m │\n",
+              "│ dense_15 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m2\u001b[0m)              │            \u001b[38;5;34m34\u001b[0m │\n",
               "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
             ],
             "text/html": [
               "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
               "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
               "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-              "│ conv2d_7 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Conv2D</span>)               │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">26</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">26</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">2</span>)      │            <span style=\"color: #00af00; text-decoration-color: #00af00\">56</span> │\n",
+              "│ conv2d_14 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Conv2D</span>)              │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">26</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">26</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">2</span>)      │            <span style=\"color: #00af00; text-decoration-color: #00af00\">56</span> │\n",
               "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-              "│ conv2d_8 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Conv2D</span>)               │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">12</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">12</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">2</span>)      │            <span style=\"color: #00af00; text-decoration-color: #00af00\">38</span> │\n",
+              "│ conv2d_15 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Conv2D</span>)              │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">12</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">12</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">2</span>)      │            <span style=\"color: #00af00; text-decoration-color: #00af00\">38</span> │\n",
               "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-              "│ flatten_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Flatten</span>)             │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">288</span>)            │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
+              "│ flatten_7 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Flatten</span>)             │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">288</span>)            │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
               "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-              "│ dense (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │         <span style=\"color: #00af00; text-decoration-color: #00af00\">4,624</span> │\n",
+              "│ dense_14 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │         <span style=\"color: #00af00; text-decoration-color: #00af00\">4,624</span> │\n",
               "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-              "│ dense_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">2</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">34</span> │\n",
+              "│ dense_15 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">2</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">34</span> │\n",
               "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
               "</pre>\n"
             ]
@@ -247,63 +271,56 @@
     {
       "cell_type": "code",
       "source": [
-        "model.compile(loss='binary_crossentropy')"
+        "from tensorflow.keras.optimizers import SGD\n",
+        "optimizer = SGD(learning_rate=0.01)\n",
+        "\n",
+        "model.compile(optimizer=optimizer,loss='binary_crossentropy',metrics=['accuracy'])"
       ],
       "metadata": {
         "id": "TCWklb8nVjJa"
       },
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model.fit(X, y, epochs=10)"
+        "model.fit(X, y, epochs=5)"
       ],
       "metadata": {
         "id": "BhY68AZqVlBa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bcd77af9-dd9a-466b-c014-c527fb21b074"
+        "outputId": "f9582ac3-d7bb-409b-9410-4db4372a6697"
       },
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2s/step - loss: 0.6441\n",
-            "Epoch 2/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 54ms/step - loss: 0.5193\n",
-            "Epoch 3/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step - loss: 0.4662\n",
-            "Epoch 4/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 54ms/step - loss: 0.4190\n",
-            "Epoch 5/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 55ms/step - loss: 0.3806\n",
-            "Epoch 6/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 59ms/step - loss: 0.3497\n",
-            "Epoch 7/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 52ms/step - loss: 0.3174\n",
-            "Epoch 8/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 52ms/step - loss: 0.2918\n",
-            "Epoch 9/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 69ms/step - loss: 0.2678\n",
-            "Epoch 10/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 54ms/step - loss: 0.2426\n"
+            "Epoch 1/5\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 592ms/step - accuracy: 0.5000 - loss: 4.1669\n",
+            "Epoch 2/5\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 61ms/step - accuracy: 0.5000 - loss: 4.1568\n",
+            "Epoch 3/5\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 38ms/step - accuracy: 0.5000 - loss: 4.1476\n",
+            "Epoch 4/5\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 41ms/step - accuracy: 0.5000 - loss: 4.1391\n",
+            "Epoch 5/5\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 38ms/step - accuracy: 0.5000 - loss: 4.1309\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.history.History at 0x7ac528eb6950>"
+              "<keras.src.callbacks.history.History at 0x7b89713858d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 62
         }
       ]
     }
